--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "babel-loader": "^8.2.5",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.12",
     "eslint-plugin-vue": "^9.0.0",
@@ -40,5 +41,10 @@
     "vite": "^2.9.12",
     "vue-loader": "^16.8.3",
     "vue-tsc": "^0.38.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
