--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mantis_ui",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "commit": "cz"
+    "commit": "cz",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "vue": "^3.2.37"
@@ -40,11 +41,16 @@
     "typescript": "~4.7.4",
     "vite": "^2.9.12",
     "vue-loader": "^16.8.3",
-    "vue-tsc": "^0.38.1"
+    "vue-tsc": "^0.38.1",
+    "semantic-release": "^19.0.3"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Gabrielr47/mantis_ui.git"
   }
 }
