--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "mantis_ui",
   "version": "0.0.0-development",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/mantis_ui.umd.js",
+  "module": "dist/mantis_ui.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/mantis_ui.es.js",
+      "require": "./dist/mantis_ui.umd.js"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
